--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.5.0",
     "@types/mocha": "^10.0.0",
+    "@types/react": "^18.0.25",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "chai": "^4.3.6",
