--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-socket.io-lib",
+  "name": "react-simple-socket.io",
   "version": "1.0.0-test-01",
   "description": "A React context for setting up and using Socket.IO in your app",
   "author": "Kwame Opare Asiedu",
