--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-simple-socket.io",
-  "version": "1.0.0-test-01",
+  "version": "1.0.0-test.1",
   "description": "A React context for setting up and using Socket.IO in your app",
   "author": "Kwame Opare Asiedu",
   "main": "dist/index.js",
