Added typings file. Added typings declaration and keywords in package.json

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-simple-socket.io",
-  "version": "1.0.0-test.1",
+  "version": "1.0.0-test.2",
   "description": "A React context for setting up and using Socket.IO in your app",
   "author": "Kwame Opare Asiedu",
-  "main": "dist/index.js",
   "type": "module",
+  "main": "dist/index.js",
+  "typings": "dist/types.d.ts",
   "scripts": {
     "build": "rollup --config"
   },
@@ -28,5 +29,14 @@
   },
   "peerDependencies": {
     "react": "^18.2.0"
-  }
+  },
+  "keywords": [
+    "react",
+    "hooks",
+    "socket",
+    "websocket",
+    "socket.io",
+    "context",
+    "provider"
+  ]
 }
