--- a/example/client/package.json
+++ b/example/client/package.json
@@ -16,6 +16,7 @@
     "@mantine/hooks": "^5.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-simple-socket.io": "^1.0.0-test.1",
     "zustand": "^4.1.1"
   },
   "devDependencies": {
